<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/topbun"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="379dp"
        android:layout_height="142dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupChees"
        app:layout_constraintVertical_bias="0.966"
        app:srcCompat="@drawable/bottombun" />

    <RadioGroup
        android:id="@+id/radioGroupPatty"
        android:layout_width="268dp"
        android:layout_height="117dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <RadioButton
            android:id="@+id/radioBtnBeef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beef_patty" />

        <RadioButton
            android:id="@+id/radioBtnLamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lamb_patty" />

        <RadioButton
            android:id="@+id/radioBtnOstrich"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ostrich_patty" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="122dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:checked="false"
        android:clickable="true"
        android:onClick="beconListener"
        android:text="@string/prosciutto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupPatty" />

    <RadioGroup
        android:id="@+id/radioGroupChees"
        android:layout_width="259dp"
        android:layout_height="46dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox">

        <RadioButton
            android:id="@+id/radioBtnAsiago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asiego_cheese" />

        <RadioButton
            android:id="@+id/radioBtnChadder"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/creme_fraich" />
    </RadioGroup>

    <SeekBar
        android:id="@+id/seekBar"
        style="@android:style/Widget.SeekBar"
        android:layout_width="365dp"
        android:layout_height="84dp"

        android:clickable="false"
        android:progressTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.683" />

    <TextView
        android:id="@+id/textViewCalories"
        android:layout_width="191dp"
        android:layout_height="60dp"
        android:text="@string/chalories"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>